--- a/third_repo.Rmd
+++ b/third_repo.Rmd
@@ -22,9 +22,9 @@ You will submit a GitHub repo that:
 
 ```{r cars}
 
-> library(readxl)
-> Data_Education_and_Internet_Access <- read_excel("~/Desktop/Hertie School of Governance/Data Analysis/Data Education and Internet Access.xlsx")
-> View(Data_Education_and_Internet_Access)
-> View(Data_Education_and_Internet_Access)
+library(readxl)
+Data_Education_and_Internet_Access <- read_excel("~/Desktop/third_repo/Data Education and Internet Access.xlsx")
+View(Data_Education_and_Internet_Access)
+
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
