--- a/third_repo.Rmd
+++ b/third_repo.Rmd
@@ -1,14 +1,23 @@
 ---
-title: "third_repo"
+title: "Third Assignment"
 output:
   html_document: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(readxl)
+Education_and_Internet <- read_excel("~/Desktop/Education and Internet.xlsx")
+View(Education_and_Internet)
+
 ```
 
 ## Asignment 3
+The main goal of this third assignment is to gather web based data from at least two sources, merge the data sets, conduct basic descriptive and some inferential statistics on the data to address a relevant research question and briefly describe the results including with dynamically generated tables and figures. 
+
+
+
+
 Purpose: Gather, clean, and (begin to) analyse data
 Deadline: 11 November
 You will submit a GitHub repo that:
@@ -21,9 +30,7 @@ You will submit a GitHub repo that:
 
 
 ```{r cars}
-library(readxl)
-Education_and_Internet <- read_excel("~/Desktop/Education and Internet.xlsx")
-View(Education_and_Internet)
+
 ```
 
 
