--- a/third_repo.Rmd
+++ b/third_repo.Rmd
@@ -6,16 +6,18 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(readxl)
-Education_and_Internet <- read_excel("~/Desktop/Education and Internet.xlsx")
-View(Education_and_Internet)
 
 ```
 
-## Asignment 3
+
+## Introduction
 The main goal of this third assignment is to gather web based data from at least two sources, merge the data sets, conduct basic descriptive and some inferential statistics on the data to address a relevant research question and briefly describe the results including with dynamically generated tables and figures. 
 
+We have gathered to different datasets from two different data sources. The first dataset is from the CIA World Fact book, and the second from the The Quality of Government Institute (QOG), which is part of the University of Gothenburg. Both datasets are open and can be found in their respective webpages.
 
+In order to produce a tangible statistical analysis we have cleaned and merged the relevant data of both datasets. Then, we have related the data with the aim of adressing, as well as possible, our researching question to begin to determine whether our hypothesis is correct or not.
+
+## Detailed process
 
 
 Purpose: Gather, clean, and (begin to) analyse data
@@ -29,7 +31,7 @@ You will submit a GitHub repo that:
 
 
 
-```{r cars}
+```{r echo=FALSE}
 
 ```
 
