--- a/third_repo.Rmd
+++ b/third_repo.Rmd
@@ -22,8 +22,12 @@ In order to produce a tangible statistical analysis we have cleaned and merged t
 In this section, we have created three different plots in order to expose in a visual way the data that we have selected to answer our research question. Two of these plots are related to education and Internet accessibility. In the first one there is a comparison between the quality of the education and Internet access and the second one between average schooling year and Internet users. The third one focuses its attention on the GDP and makes and compares GDP per capita and Internet users.
 
 In order to display, as best as possible, our data we have chosen different figures to make understandable the correlation between two different data. 
-The first option chosen has been an axis with two vectors, each one representing a different variable (Internet Users, GDP per capita, Average of Schooling Years or Quality of Education). In this axis, the tendency in the correlation between the two different variables it is represented by points, each one representing a different country. Altogether, it gives a clear picture of whether there is a tendency or not that confirms the hypothesis of our researching question.  
+Each correlation has been displayed with an axis with two vectors, each one representing a different variable (either Internet Users, GDP per capita, Average of Schooling Years or Quality of Education). In this axis, the tendency in the correlation between the two different variables it is represented by points, each one representing a different country. Altogether, it gives a clear picture of whether there is a tendency or not that confirms the hypothesis of our researching question.  
 
+# Results
+The results obtained in the three different figures have been similar. We can observe that all the data introduced in every different figure, that is all the points, draw a clear upward curve tendency. However, the drowned upward curve is not exactly the same in all three cases. 
+The upward curve between Internet Accessibility and Quality of Education is far more dispersed than GDP per capita and Internet users. The latter is much more uniform with just a few points clearly away from the main tendency of the curve.
+Likewise, in the second figure it can be appreciated that the uniformity of the upward curve it is between the first and the third figure.
 
 ```{r echo=FALSE}
 library(xlsx)
