--- a/third_repo.Rmd
+++ b/third_repo.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Third Assignment"
 output:
-  word_document: default
   pdf_document: default
+  word_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -48,7 +48,7 @@ Data_Education_and_Internet_Access <- read.xlsx("/Users/komaiyumi/Desktop/Social
 ###Plots
 In the first one there is a comparison between the quality of the education and Internet access and the second one between average schooling year and Internet users of all countries in 2016.
 
-```{r echo=FALSE}
+```{r echo=FALSE, fig.align='center'}
 ## cleaning QOG data
 names(Data_Education_and_Internet_Access) <- c('Country', 'Quality_of_Education_System', 'Average_Schooling_Year','Internet_Uers')
 
@@ -101,7 +101,7 @@ names(Data_GDPperCAPITA_and_Internet_Acess) <- c('Country', 'GDPperCapita', 'Int
 
 This plot focuses its attention on the GDP and makes and compares GDP per capita and Internet users of all countries in 2011.
 
-```{r echo=FALSE}
+```{r echo=FALSE, fig.align='center'}
 ### creating plot
 plot(log(Data_GDPperCAPITA_and_Internet_Acess$'GDPperCapita'), Data_GDPperCAPITA_and_Internet_Acess$'InternetUers',xlab='Internet Users',ylab='GDP per Capita')
 ```
